Fixed routing. Pages now loading rather than appending. One last bit of javasscript magic left to do and that is make the anon classed panels that are collapsed need to have cursor: pointer on them.

--- a/src/components/imageAccordion/index.css
+++ b/src/components/imageAccordion/index.css
@@ -15,3 +15,11 @@
         max-width: 25rem !important;
       }
 }
+
+.accordion-panel {
+  cursor: default;  
+}
+
+.accordion-Link {
+  cursor: pointer;
+}
